- New keyword MailFlag for a system definition. It's parameter is a file    name of a file that will be created if the system's inbound directory has    received any files during a diskpoll transfer session.  - Some adaptions for older Linux header files.  - Fixed the UNIX makefile to use g++ instead of gcc.  - Fix: diskpoll could not handle relative path names in the configuration    file, at least under OS/2.

--- a/src/makefile
+++ b/src/makefile
@@ -1,6 +1,6 @@
 # Makefile for GCC on any UNIX platform
 
-GPP=gcc
+GPP=g++
 CFLAGS=-DNOEXCEPTIONS -Wall -pedantic -O3
 
 .cc.o:
@@ -24,7 +24,7 @@ OBJFILES = \
 default: test$(EXE)
 
 test$(EXE): $(OBJFILES)
-	$(GPP) $(CFLAGS) -o diskpoll$(EXE) $(OBJFILES) -lstdc++ -s
+	$(GPP) $(CFLAGS) -o diskpoll$(EXE) $(OBJFILES) -s
 
 clean:
 	-rm *.o
