Update makefiles to using with GCC 2.95.x; Update documentation

--- a/src/makefile.unx
+++ b/src/makefile.unx
@@ -1,10 +1,21 @@
 # Makefile for GCC on any UNIX platform
 
 GPP=g++
-CFLAGS=-DNOEXCEPTIONS -Wall -pedantic
+
+# For old version gcc (2.7.x)
+#CFLAGS=-DNOEXCEPTIONS -Wall -pedantic -c
+
+CFLAGS	= -fexceptions -Wall -pedantic -c
+CDEFS	= -DINCS_NEED_DOT_H -DCFGDIR=\"/usr/local/etc/fido/\"
+LFLAGS	= -s -Wall
+TARGETOPT= -o
+EXE	=
+
+LIBS	= -lstdc++
+TARGET	= diskpoll$(EXE)
 
 .cc.o:
-	$(GPP) -c $(CFLAGS) $<
+	$(GPP) $(CDEFS) $(CFLAGS) $<
 
 OBJFILES = \
  main.o \
@@ -21,10 +32,12 @@ OBJFILES = \
  prepcfg.o \
  log.o
 
-default: test$(EXE)
+default: $(TARGET)
 
-test$(EXE): $(OBJFILES)
-	$(GPP) $(CFLAGS) -o diskpoll$(EXE) $(OBJFILES) -lstdc++ -s
+all:	$(TARGET)
+
+$(TARGET): $(OBJFILES)
+	$(GPP) $(TARGETOPT) $(TARGET) $(OBJFILES) $(LFLAGS) $(LIBS)
 
 clean:
 	-rm *.o
@@ -32,5 +45,5 @@ clean:
 	-rm *~
 
 distclean:
-	-rm diskpoll$(EXE)
+	-rm $(TARGET)
 
